[project]
name = "triton-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "triton>=3.5.1",
]

[tool.ruff]
line-length = 88  # Same as black
target-version = "py312"
lint.extend-select = [
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.extend-ignore = ["F722", "F821", "E731"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["fm_energy"]
force-single-line = false
lines-after-imports = 2
